--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -60,5 +60,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <TextView
+        android:id="@+id/questions_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/score"
+        android:textSize="@dimen/text_size_32"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/button_yes"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
